--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
       </div>
       <div class="Credits">
-        <p>Created By Swalih </p>
+        <p>Created By Swalih  muhammed</p>
       </div>
     </div>
   </div>
